--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- Navbar-->
   <nav class="navbar-expand-md navbar fixed-top" id="navbar"><a class="navbar-brand" data-scroll="" href="#home-area">
       <!-- Navbar Logo-->
-      <img class="img-fluid" src="" alt=""></a>
+      <img class="img-fluid" src=""></a>
     <span class="navbar-menu ml-auto" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" role="button"><span class="btn-line"></span></span>
     <div class="collapse navbar-collapse order-1 order-lg-0" id="navbarSupportedContent">
       <!-- Navbar menu-->
@@ -62,7 +62,7 @@
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
           <h1 class="home-name">SUMIT <span>PODDAR</span></h1>
-          <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Designer</b><b>Developer</b><b>Freelancer</b></span></h4>
+          <h4 class="cd-headline clip home-headline">I am a <span class="cd-words-wrapper single-headline"><b class="is-visible">Designer</b><b>Developer</b><b>Freelancer</b></span></h4>
         </div>
       </div>
     </div>
