--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- endremoveIf(customizerDist)-->
 </head>
 
-<body class="theme-dark">
+<body class="theme-dark" oncontextmenu="return false">
   <!-- Preloader-->
   <div class="preloader">
     <div class="preloader-block">
